--- a/sae301/.vscode/extensions.json
+++ b/sae301/.vscode/extensions.json
@@ -1,3 +1,6 @@
 {
-  "recommendations": ["Vue.volar", "Vue.vscode-typescript-vue-plugin"]
+  "recommendations": ["Vue.volar", "Vue.vscode-typescript-vue-plugin",
+  "ms-vscode-remote.remote-ssh",
+  "rafaelmaiolla.remote-vscode"
+]
 }
